--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ jobs:
   broken-links:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Install mintlify
         run: npm i -g mintlify
       - name: Check mintlify broken links
